# PIAIC_WEB_FSD

./: README.md
Assignment01/: index.ts
Assignment02/: Assign02.js  Assign02.txt
Assignment04/: Assign04.js  Assign04.ts
Class04/: Class04.ts
Class08/: index.ts
Quarter_One_TypeScript/: README.md
Quarter_One_TypeScript/Assignment01/: index.js
Quarter_One_TypeScript/Assignment03/: Assign03.js  Assign03.ts  Assign03.txt
Quarter_One_TypeScript/Assignment04/: Assign04.js  Assign04.ts
Quarter_One_TypeScript/Assignment05/: assign05.js  assign05.ts
Quarter_One_TypeScript/Assignment06/: assign06.js  assign06.ts
Quarter_One_TypeScript/Assignment07/: Assign07.js  Assign07.ts  Assign07.txt
Quarter_One_TypeScript/Assignment08/: Assign08.txt
Quarter_One_TypeScript/Class01/: ClassPresentation.txt  package.json
Quarter_One_TypeScript/Class04/: Class04.js
Quarter_One_TypeScript/Class06/: index.js
Quarter_Three_Python_FAST-API/: README.md
Quarter_Three_Python_FAST-API/Assignmen01_Q3/: Assignment01-Q3.txt
Quarter_Three_Python_FAST-API/Task01_Python/class-api-task01/: pyproject.toml
Quarter_Three_Python_FAST-API/Task01_Python/class-api-task01/classtask01/: main.py  main2.py
Quarter_Three_Web3/: README.md
Quarter_Two_NextJS/: README.md
Quarter_Two_NextJS/ClassTask01/nextjs-classtask01/: README.md  package-lock.json  package.json
Quarter_Two_NextJS/ClassTask02/classtask02nextjs/: package-lock.json  package.json
Quarter_Two_NextJS/ClassTask03/classtask03_nextjs/: README.md  package-lock.json  (+1 more)
Quarter_Two_NextJS/NextJS First App/: Assignment 1.txt
(+82 files in other folders)
